azureps-cmdlets-docs/ResourceManager/AzureRM.Backup/v2.6.0/Get-AzureRmBackupJobDetails.md
---
external help file: Microsoft.Azure.Commands.AzureBackup.dll-Help.xml
ms.assetid: 6187F603-5298-4854-94F3-0C38FCF3125F
online version:
schema: 2.0.0
content_git_url: https://github.com/Visual-Studio-China/azure-powershell/blob/3.6.0/src/ResourceManager/AzureBackup/Commands.AzureBackup/help/Get-AzureRmBackupJobDetails.md
original_content_git_url: https://github.com/Visual-Studio-China/azure-powershell/blob/3.6.0/src/ResourceManager/AzureBackup/Commands.AzureBackup/help/Get-AzureRmBackupJobDetails.md
gitcommit: https://github.com/Visual-Studio-China/azure-powershell/blob/94e42834e29c78cafba9e3f1e99e14af92561036
---

# Get-AzureRmBackupJobDetails

## SYNOPSIS
Gets the details of a Backup job.

## SYNTAX

### JobsFiltersSet (Default)
```
Get-AzureRmBackupJobDetails -Job <AzureRMBackupJob> [<CommonParameters>]
```

### IdFiltersSet
```
Get-AzureRmBackupJobDetails -Vault <AzureRMBackupVault> -JobId <String> [<CommonParameters>]
```

## DESCRIPTION
The **Get-AzureRmBackupJobDetails** cmdlet gets the details of an Azure Backup job.
You can use this cmdlet to gather information about a job that fails.

## EXAMPLES

### Example 1: Display the details of a failed job
```
PS C:\>$Vault = Get-AzureRmBackupVault -Name "Vault03" 
PS C:\> $Jobs = Get-AzureRmBackupJob -Vault $Vault -Status Failed
PS C:\> $JobDetails = Get-AzureRmBackupJobDetails -Job $Jobs[0]
PS C:\> $JobDetails.ErrorDetails
ErrorCode ErrorMessage                            Recommendations
--------- ------------                            ---------------
   400001 Command execution failed.               {Another operation is currently in p...
```

The first command gets the vault named Vault03 by using the **Get-AzureRmBackupVault** cmdlet.
The command stores that object in the $Vault variable.

The second command gets failed jobs from the vault in $Vault, and then stores them in the $Jobs array variable.

The third job gets details for the first job in the $Jobs variable, and then stores those details in the $JobDetails variable.

The final command displays the **ErrorDetails** property of $JobDetails by using standard dot syntax.

### Example 2: Display the recommended action for a failed job
```
PS C:\>$JobDetails.ErrorDetails.Recommendations
Another operation is currently in progress on this item. Please wait until the previous operation is completed, and then retry.
```

This command displays the recommended action from the $JobDetails variable that was created in the first example.

## PARAMETERS

### -Job
Specifies a job for which this cmdlet gets details.
To obtain an **AzureRmBackupJob** object, use the Get-AzureRmBackupJob cmdlet.

```yaml
Type: AzureRMBackupJob
Parameter Sets: JobsFiltersSet
Aliases: 

Required: True
Position: Named
Default value: None
Accept pipeline input: True (ByValue)
Accept wildcard characters: False
```

### -JobId
Specifies the ID of a job for which this cmdlet gets details.
The ID is the **InstanceId** property of an **AzureRmBackupJob** object.
To obtain an **AzureRmBackupJob** object, use Get-AzureRmBackupJob.

```yaml
Type: String
Parameter Sets: IdFiltersSet
Aliases: 

Required: True
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -Vault
Specifies the Backup vault for which this cmdlet gets job details.
To obtain an **AzureRmBackupVault** object, use the Get-AzureRmBackupVault cmdlet.

```yaml
Type: AzureRMBackupVault
Parameter Sets: IdFiltersSet
Aliases: 

Required: True
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### CommonParameters
This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable. For more information, see about_CommonParameters (http://go.microsoft.com/fwlink/?LinkID=113216).

## INPUTS

### None

## OUTPUTS

### AzureRmBackupJobDetails

## NOTES
* None

## RELATED LINKS

[Get-AzureRmBackupJob](./Get-AzureRmBackupJob.md)

[Get-AzureRmBackupVault](./Get-AzureRmBackupVault.md)


